Fix: Drag&Drop was not saving timeIni and timeFin. Fix2: It wasn´t displaying horaIni-HoraFin info on screen when no logged in

--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -102,7 +102,8 @@
                                           ng-click="grafikoa(orden.ref);arraton(orden.ref);"
                                           ng-bind-html="orden.ref"
                                     ></span>
-                                    <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
                                 </div>
                             </div> <!-- box-of -->
                             <div
@@ -144,7 +145,8 @@
                                             ng-bind-html="orden.ref"
 
                                             ></span>
-                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
                                 </div>
                             </div>
                             <div
@@ -186,7 +188,8 @@
                                         ng-bind-html="orden.ref"
 
                                         ></span>
-                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
                                 </div>
                             </div> <!-- box-of -->
                             <div
@@ -228,7 +231,8 @@
                                         ng-bind-html="orden.ref"
 
                                         ></span>
-                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
                                 </div>
                             </div> <!-- box-of -->
                             <div
@@ -270,7 +274,8 @@
                                         ng-bind-html="orden.ref"
 
                                         ></span>
-                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
                                 </div>
                             </div> <!-- box-of -->
                             <div
@@ -312,7 +317,8 @@
                                         ng-bind-html="orden.ref"
 
                                         ></span>
-                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
                                 </div>
                             </div> <!-- box-of -->
                             <div
@@ -354,7 +360,8 @@
                                         ng-bind-html="orden.ref"
 
                                         ></span>
-                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
                                 </div>
                             </div> <!-- box-of -->
                             <div
@@ -399,7 +406,8 @@
                                         ng-bind-html="orden.ref"
 
                                         ></span>
-                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
                                 </div>
                             </div> <!-- box-of -->
                             <div
@@ -441,7 +449,8 @@
                                         ng-bind-html="orden.ref"
 
                                         ></span>
-                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
                                 </div>
                             </div> <!-- box-of -->
                             <div
@@ -483,7 +492,8 @@
                                         ng-bind-html="orden.ref"
 
                                         ></span>
-                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
                                 </div>
                             </div> <!-- box-of -->
                             <div
@@ -525,7 +535,8 @@
                                         ng-bind-html="orden.ref"
 
                                         ></span>
-                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
                                 </div>
                             </div> <!-- box-of -->
                             <div
@@ -567,7 +578,8 @@
                                         ng-bind-html="orden.ref"
 
                                         ></span>
-                                    <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                    <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
                                 </div>
                             </div> <!-- box-of -->
                             <div
@@ -609,7 +621,8 @@
                                         ng-bind-html="orden.ref"
 
                                         ></span>
-                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
                                 </div>
                             </div> <!-- box-of -->
                             <div
@@ -651,7 +664,8 @@
                                         ng-bind-html="orden.ref"
 
                                         ></span>
-                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
                                 </div>
                             </div> <!-- box-of -->
                             <div
@@ -697,7 +711,8 @@
                                         ng-bind-html="orden.ref"
 
                                         ></span>
-                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
                                 </div>
                             </div> <!-- box-of -->
                             <div
@@ -739,7 +754,8 @@
                                         ng-bind-html="orden.ref"
 
                                         ></span>
-                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
                                 </div>
                             </div> <!-- box-of -->
                             <div
@@ -780,7 +796,8 @@
                                         ng-bind-html="orden.ref"
 
                                         ></span>
-                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
                                 </div>
                             </div> <!-- box-of -->
                             <div
@@ -822,7 +839,8 @@
                                         ng-bind-html="orden.ref"
 
                                         ></span>
-                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
                                 </div>
                             </div> <!-- box-of -->
                             <div
@@ -864,7 +882,8 @@
                                         ng-bind-html="orden.ref"
 
                                         ></span>
-                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
                                 </div>
                             </div> <!-- box-of -->
                             <div
@@ -906,7 +925,9 @@
                                         ng-bind-html="orden.ref"
 
                                         ></span>
-                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
+
                                 </div>
                             </div> <!-- box-of -->
                             <div
@@ -948,7 +969,8 @@
                                         ng-bind-html="orden.ref"
 
                                         ></span>
-                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Orduak:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denbora">Hora ini:{{orden.denbora}}</div>
+                                        <div class="divorden" ng-if="!isadmin && orden.denborafin">Hora fin:{{orden.denborafin}}</div>
                                 </div>
                             </div> <!-- box-of -->
                             <div
